[package]
name = "apue"
version = "0.1.0"
authors = ["Shion Yamashita <shioyama1118@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.84"
num = "0.3.1"
errno = "0.2.7"

[[bin]]
name = "f03_list_files"
path = "src/bin/ch01_overview/f03_list_files.rs"

[[bin]]
name = "f04_copy_stdin_stdout"
path = "src/bin/ch01_overview/f04_copy_stdin_stdout.rs"

[[bin]]
name = "f05_getc_putc"
path = "src/bin/ch01_overview/f05_getc_putc.rs"

[[bin]]
name = "f06_getpid"
path = "src/bin/ch01_overview/f06_getpid.rs"

[[bin]]
name = "f07_fork_exec"
path = "src/bin/ch01_overview/f07_fork_exec.rs"

[[bin]]
name = "f08_error"
path = "src/bin/ch01_overview/f08_error.rs"

[[bin]]
name = "f09_get_uid_gid"
path = "src/bin/ch01_overview/f09_get_uid_gid.rs"

[[bin]]
name = "f10_sigint"
path = "src/bin/ch01_overview/f10_sigint.rs"
