[package]
name = "apue"
version = "0.1.0"
authors = ["Shion Yamashita <shioyama1118@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.84"
num = "0.3.1"
errno = "0.2.7"

[[bin]]
name = "f03_list_files"
path = "src/bin/ch01_overview/f03_list_files.rs"

[[bin]]
name = "f04_copy_stdin_stdout"
path = "src/bin/ch01_overview/f04_copy_stdin_stdout.rs"

[[bin]]
name = "f05_getc_putc"
path = "src/bin/ch01_overview/f05_getc_putc.rs"

[[bin]]
name = "f06_getpid"
path = "src/bin/ch01_overview/f06_getpid.rs"

[[bin]]
name = "f07_fork_exec"
path = "src/bin/ch01_overview/f07_fork_exec.rs"

[[bin]]
name = "f08_error"
path = "src/bin/ch01_overview/f08_error.rs"

[[bin]]
name = "f09_get_uid_gid"
path = "src/bin/ch01_overview/f09_get_uid_gid.rs"

[[bin]]
name = "f10_sigint"
path = "src/bin/ch01_overview/f10_sigint.rs"

[[bin]]
name = "f14_limits"
path = "src/bin/ch02_standardization/f14_limits.rs"

[[bin]]
name = "f16_allocate_pathname"
path = "src/bin/ch02_standardization/f16_allocate_pathname.rs"

[[bin]]
name = "f17_open_max"
path = "src/bin/ch02_standardization/f17_open_max.rs"

[[bin]]
name = "f01_lseek"
path = "src/bin/ch03_file_io/f01_lseek.rs"

[[bin]]
name = "f02_hole"
path = "src/bin/ch03_file_io/f02_hole.rs"

[[bin]]
name = "f05_copy_stdin_stdout"
path = "src/bin/ch03_file_io/f05_copy_stdin_stdout.rs"

[[bin]]
name = "f11_print_file_flags"
path = "src/bin/ch03_file_io/f11_print_file_flags.rs"

[[bin]]
name = "f12_set_fl"
path = "src/bin/ch03_file_io/f12_set_fl.rs"

[[bin]]
name = "e02_dup2"
path = "src/bin/ch03_file_io/e02_dup2.rs"

[[bin]]
name = "e06_lseek"
path = "src/bin/ch03_file_io/e06_lseek.rs"
