[package]
name = "apue"
version = "0.1.0"
authors = ["Shion Yamashita <shioyama1118@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.84"
num = "0.3.1"
errno = "0.2.7"
structopt = "0.3.21"
anyhow = "1.0.38"

[build-dependencies]
bindgen = "0.57.0"
cc = "1.0.67"

[[bin]]
name = "echoall"
path = "src/bin/echoall.rs"

[[example]]
name = "f03_list_files"
path = "example/ch01_overview/f03_list_files.rs"

[[example]]
name = "f04_copy_stdin_stdout"
path = "example/ch01_overview/f04_copy_stdin_stdout.rs"

[[example]]
name = "f05_getc_putc"
path = "example/ch01_overview/f05_getc_putc.rs"

[[example]]
name = "f06_getpid"
path = "example/ch01_overview/f06_getpid.rs"

[[example]]
name = "f07_fork_exec"
path = "example/ch01_overview/f07_fork_exec.rs"

[[example]]
name = "f08_error"
path = "example/ch01_overview/f08_error.rs"

[[example]]
name = "f09_get_uid_gid"
path = "example/ch01_overview/f09_get_uid_gid.rs"

[[example]]
name = "f10_sigint"
path = "example/ch01_overview/f10_sigint.rs"

[[example]]
name = "f14_limits"
path = "example/ch02_standardization/f14_limits.rs"

[[example]]
name = "f16_allocate_pathname"
path = "example/ch02_standardization/f16_allocate_pathname.rs"

[[example]]
name = "f17_open_max"
path = "example/ch02_standardization/f17_open_max.rs"

[[example]]
name = "f01_lseek"
path = "example/ch03_file_io/f01_lseek.rs"

[[example]]
name = "f02_hole"
path = "example/ch03_file_io/f02_hole.rs"

[[example]]
name = "f05_copy_stdin_stdout"
path = "example/ch03_file_io/f05_copy_stdin_stdout.rs"

[[example]]
name = "f11_print_file_flags"
path = "example/ch03_file_io/f11_print_file_flags.rs"

[[example]]
name = "f12_set_fl"
path = "example/ch03_file_io/f12_set_fl.rs"

[[example]]
name = "e02_dup2"
path = "example/ch03_file_io/e02_dup2.rs"

[[example]]
name = "e06_lseek"
path = "example/ch03_file_io/e06_lseek.rs"

[[example]]
name = "f03_lstat"
path = "example/ch04_files_and_directories/f03_lstat.rs"

[[example]]
name = "f08_access"
path = "example/ch04_files_and_directories/f08_access.rs"

[[example]]
name = "f09_umask"
path = "example/ch04_files_and_directories/f09_umask.rs"

[[example]]
name = "f12_chmod"
path = "example/ch04_files_and_directories/f12_chmod.rs"

[[example]]
name = "f16_unlink"
path = "example/ch04_files_and_directories/f16_unlink.rs"

[[example]]
name = "f21_futimens"
path = "example/ch04_files_and_directories/f21_futimens.rs"

[[example]]
name = "f22_ftw"
path = "example/ch04_files_and_directories/f22_ftw.rs"

[[example]]
name = "f23_chdir"
path = "example/ch04_files_and_directories/f23_chdir.rs"

[[example]]
name = "f24_getcwd"
path = "example/ch04_files_and_directories/f24_getcwd.rs"

[[example]]
name = "f25_dev"
path = "example/ch04_files_and_directories/f25_dev.rs"

[[example]]
name = "e06_cp"
path = "example/ch04_files_and_directories/e06_cp.rs"

[[example]]
name = "e11_ftw_chdir"
path = "example/ch04_files_and_directories/e11_ftw_chdir.rs"

[[example]]
name = "f04_getc_putc"
path = "example/ch05_stdio_library/f04_getc_putc.rs"

[[example]]
name = "f05_fgets_fputs"
path = "example/ch05_stdio_library/f05_fgets_fputs.rs"

[[example]]
name = "f11_print_buffering"
path = "example/ch05_stdio_library/f11_print_buffering.rs"

[[example]]
name = "f12_tmp"
path = "example/ch05_stdio_library/f12_tmp.rs"

[[example]]
name = "f13_make_temp"
path = "example/ch05_stdio_library/f13_make_temp.rs"

[[example]]
name = "f15_fmemopen"
path = "example/ch05_stdio_library/f15_fmemopen.rs"

[[example]]
name = "e01_setbuf"
path = "example/ch05_stdio_library/e01_setbuf.rs"

[[example]]
name = "f02_getpwnam"
path = "example/ch06_system_files_and_information/f02_getpwnam.rs"

[[example]]
name = "f11_strftime"
path = "example/ch06_system_files_and_information/f11_strftime.rs"

[[example]]
name = "e02_get_passwd"
path = "example/ch06_system_files_and_information/e02_get_passwd.rs"

[[example]]
name = "e03_uname"
path = "example/ch06_system_files_and_information/e03_uname.rs"

[[example]]
name = "e05_date"
path = "example/ch06_system_files_and_information/e05_date.rs"

[[example]]
name = "f01_hello_world"
path = "example/ch07_process_environment/f01_hello_world.rs"

[[example]]
name = "f03_exit_handlers"
path = "example/ch07_process_environment/f03_exit_handlers.rs"

[[example]]
name = "f16_print_limits"
path = "example/ch07_process_environment/f16_print_limits.rs"

[[example]]
name = "f01_fork"
path = "example/ch08_process_control/f01_fork.rs"

[[example]]
name = "f03_vfork"
path = "example/ch08_process_control/f03_vfork.rs"

[[example]]
name = "f05_f06_pr_exit"
path = "example/ch08_process_control/f05_f06_pr_exit.rs"

[[example]]
name = "f08_waitpid"
path = "example/ch08_process_control/f08_waitpid.rs"

[[example]]
name = "f12_race_condition"
path = "example/ch08_process_control/f12_race_condition.rs"

[[example]]
name = "f16_exec"
path = "example/ch08_process_control/f16_exec.rs"

[[example]]
name = "f20_interpreter"
path = "example/ch08_process_control/f20_interpreter.rs"

[[example]]
name = "f22_23_system"
path = "example/ch08_process_control/f22_23_system.rs"

[[example]]
name = "f28_generate_accounting"
path = "example/ch08_process_control/f28_generate_accounting.rs"

[[example]]
name = "f29_print_accounting"
path = "example/ch08_process_control/f29_print_accounting.rs"

[[example]]
name = "f30_nice"
path = "example/ch08_process_control/f30_nice.rs"

[[example]]
name = "f31_times"
path = "example/ch08_process_control/f31_times.rs"

[[example]]
name = "f12_orphans"
path = "example/ch09_process_relationships/f12_orphans.rs"

[[example]]
name = "f02_sigusr"
path = "example/ch10_signals/f02_sigusr.rs"

[[example]]
name = "f05_nonreentrant"
path = "example/ch10_signals/f05_nonreentrant.rs"

[[example]]
name = "f07_sleep1"
path = "example/ch10_signals/f07_sleep1.rs"

[[example]]
name = "f08_sleep2"
path = "example/ch10_signals/f08_sleep2.rs"

[[example]]
name = "f10_alarm"
path = "example/ch10_signals/f10_alarm.rs"

[[example]]
name = "f11_alarm_longjmp"
path = "example/ch10_signals/f11_alarm_longjmp.rs"

[[example]]
name = "f15_sigprocmask"
path = "example/ch10_signals/f15_sigprocmask.rs"

[[example]]
name = "f20_signal_masks"
path = "example/ch10_signals/f20_signal_masks.rs"

[[example]]
name = "f22_sigsuspend"
path = "example/ch10_signals/f22_sigsuspend.rs"

[[example]]
name = "f23_sigsuspend_global"
path = "example/ch10_signals/f23_sigsuspend_global.rs"

[[example]]
name = "f26_system"
path = "example/ch10_signals/f26_system.rs"

[[example]]
name = "f28_posix_system"
path = "example/ch10_signals/f28_posix_system.rs"

[[example]]
name = "f29_sleep"
path = "example/ch10_signals/f29_sleep.rs"

[[example]]
name = "f31_sigtstp"
path = "example/ch10_signals/f31_sigtstp.rs"

[[example]]
name = "f02_print_threads"
path = "example/ch11_threads/f02_print_threads.rs"

[[example]]
name = "f03_pthread_join"
path = "example/ch11_threads/f03_pthread_join.rs"

[[example]]
name = "f04_incorrect_pthread_exit"
path = "example/ch11_threads/f04_incorrect_pthread_exit.rs"

[[example]]
name = "f05_pthread_cleanup"
path = "example/ch11_threads/f05_pthread_cleanup.rs"

[[example]]
name = "f13_pthread_mutex_timedlock"
path = "example/ch11_threads/f13_pthread_mutex_timedlock.rs"

[[example]]
name = "f16_pthread_barrier"
path = "example/ch11_threads/f16_pthread_barrier.rs"

[[example]]
name = "e01_correct_pthread_exit"
path = "example/ch11_threads/e01_incorrect_pthread_exit.rs"
